--- a/style.css
+++ b/style.css
@@ -9,11 +9,22 @@ body {
     background: #F9F9F9;
     color: #333;
     text-align: center;
+
 }
-
+.container {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:8rem;
+    background-size:contain;
+}
 .hello {
+    height:100%;
+    width:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
     font-size: 2.5rem;
-
     background: linear-gradient(to right, black 50%, transparent 50%);
     background-size: 200% 100%;
     background-position:  0 100%;
@@ -21,22 +32,11 @@ body {
     -webkit-text-fill-color: transparent;
     transition: background-position 2s ease;
 }
-
-.hiddenimage {
-    width: 9rem;
-    z-index: 2;
-    pointer-events: none;
-    transition-delay: 0s;
-    opacity: 0;
+.container:hover  {
+    background: url(resources/Photo.jpg) center no-repeat;
+    background-size:contain;
 }
-
-
-.hello:hover ~ .hiddenimage {
-    opacity: 1;
-    transition-delay: 0.5s;
-}
-
-.hello:hover {
+.container:hover .hello{
     background-position: -100% 0;
 }
 
